productMaterial refactoring